--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -1,12 +1,14 @@
 mixin nav-content()
   ul
     li: a(href="#about") Home
-    li: a(href="#articles") Articles
-    li: a(href="#package") Package
     li: a(href="#poster") Poster
     li: a(href="#editorial") Editorial
     li: a(href="#youtube") Advertise
-    li: a(href="#app") App
+    li: a(href="#package") Package
+    li: a(href="#articles") Articles
+    li: a(href="#app2") App
+    li: a(href="#icon") Icon
+    li: a(href="#note") Note
     li: a(href="#contact") Contact
 
 .mobile-nav
