--- a/_jadefiles/section-articles.jade
+++ b/_jadefiles/section-articles.jade
@@ -5,7 +5,7 @@ section.articles#articles
 		.col-50.flex.flex--center.order-first
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented designing articles with Table Tennis
+					p.home-lead.outdented designing articles
 
 		.col-50.flex--center
 			.article-wrap
