--- a/_jadefiles/section-package.jade
+++ b/_jadefiles/section-package.jade
@@ -4,7 +4,7 @@ section.package#package
 		.col-50.flex.flex--center
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented Package design with Table Tennis
+					p.home-lead.outdented Package design
 
 		.col-50.flex--center.order-first
 			.article-wrap
