--- a/assets/css/3-sections/_home-footer.sass
+++ b/assets/css/3-sections/_home-footer.sass
@@ -2,7 +2,7 @@
 
   a
     color: white
-    background: #e24040
+    background: #64696B
     display: block
     width: 100%
     line-height: 6
@@ -21,4 +21,4 @@
       font-size: 20px
 
     &:hover
-      background: darken(#e24040, 8%)
+      background: darken(#416B41, 8%)
