--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -1,25 +1,27 @@
 section.notes
 	background:
-		image: url(../img/notes-bg.jpg)
+		// image: url(../img/bgb.png)
 		size: cover
 		position: center
 	color: white
-	height: 300px
+	height: 500px
 
 	.home-lead
-		margin-top: 10px
+		margin-top: 100px
 
 	.col-1
+		width: 240px
 		padding-left: 30px
-		font-size: 18px
+		font-size: 14px
 		line-height: 1.8
 		margin-top: 30px
 		padding-right: 30px
+		color: black
 		&:first-child
 			padding-left: 0
 			padding-right: 30px
-			text-align: center
-			border-right: solid 2px white
+			text-align: right
+			border-right: solid 2px gray
 
 		@media (max-width: 640px)
 			padding: 0 10px
