--- a/assets/css/3-sections/_home-package.sass
+++ b/assets/css/3-sections/_home-package.sass
@@ -1,8 +1,10 @@
 section.package
+	padding: 150px 0px 150px 0px !important	
 
 	.col-1
 		display: flex
 		align-items: center
+		justify-content: center
 
 	.home-cta
 		color: white
@@ -65,7 +67,8 @@ section.package
 
 	@media(max-width: 640px)
 		.desc-wrap
-			margin-top: 50px
+			margin-top: -50px
+		margin-bottom: -50px	
 
 
 	@media(max-width: 999px) and (min-width: 640px)
