--- a/assets/css/3-sections/_home-poster.sass
+++ b/assets/css/3-sections/_home-poster.sass
@@ -12,18 +12,21 @@
   .poster1
     background:
       // color: #E0EAA4
-      image: url(/assets/img/lightl.png)
+      image: url(/assets/img/bgb.png)
       position: center
+      size: cover
     padding: 100px 0
 
   .poster2
     background:
       // color: #1769ff
-      image: url(/assets/img/right.png)
+      image: url(/assets/img/bgb.png)
       position: center
+      size: cover
     padding: 100px 0
 
-
+    @media (max-width: 640px)
+      display: none
   .home-cta
     font-size: 24px
     color: #ea4c89
