--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -1,12 +1,16 @@
 section.youtube
 	background:
-		image: url(../img/vine-bg.jpg)
+		image: url(../img/bgb.png)
 		position: center
 		size: cover
 	color: black
+	height: 500px
 	
 	.home-cta
 		color: #e20a0a
+
+	.home-lead
+		margin-left: 50px	
 
 	.flex-video
     box-shadow: 0px 4px 40px 3px rgba(0,0,0,0.5)
@@ -14,6 +18,7 @@ section.youtube
 
     @media (max-width: 985px)
     	transform: scale(1)
+
 
 	.video-strip
 		position: absolute
@@ -33,7 +38,7 @@ section.youtube
 
 	.col-1
 		position: relative
-		height: 400px
+		height: 500px
 		display: flex
 		align-items: stretch
 		flex-direction: column
@@ -46,3 +51,4 @@ section.youtube
 
 			&:last-child
 				padding: 0px 20px 50px
+			
