--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -29,7 +29,7 @@
 		flex-direction: rows
 
 	.flex--center	
-		justify-content: center			
+		justify-content: center
 
 	.flex--space-around
 		justify-content: space-around
@@ -77,7 +77,8 @@
 // Typography
 .home-lead
 	line-height: 1.1
-	font-size: 36px	
+	font-size: 30px
+	color: gray
 	
 
 	&.outdented
