--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -367,7 +367,7 @@ textarea {
 
 .gigantic, .huge, .large, .bigger, .big,
 h1, h2, h3, h4, h5, h6 {
-  color: #000;
+  color: #D89F62;
   font-weight: bold; }
 
 .gigantic {
@@ -413,11 +413,11 @@ hr {
   height: 0; }
 
 a {
-  color: #000;
+  color: #D89F62;
   text-decoration: none;
   outline: 0; }
   a:hover, a:focus {
-    color: #333333; }
+    color: #ecd1b4; }
 
 ::-moz-selection {
   background: none; }
@@ -520,7 +520,8 @@ body {
     padding: 0 20px 0 0;
     text-align: right; }
   .home-wrap header .site-nav li {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    font-size: 13px; }
     .home-wrap header .site-nav li:last-child {
       margin-bottom: 0; }
   .home-wrap header .email-link {
@@ -624,12 +625,15 @@ section.about {
     max-width: 300px; } }
 
 section.youtube {
-  background-image: url(../img/vine-bg.jpg);
+  background-image: url(../img/bgb.png);
   background-position: center;
   background-size: cover;
-  color: black; }
+  color: black;
+  height: 500px; }
   section.youtube .home-cta {
     color: #e20a0a; }
+  section.youtube .home-lead {
+    margin-left: 50px; }
   section.youtube .flex-video {
     box-shadow: 0px 4px 40px 3px rgba(0, 0, 0, 0.5);
     -webkit-transform: scale(1.4);
@@ -653,7 +657,7 @@ section.youtube {
         display: none; } }
   section.youtube .col-1 {
     position: relative;
-    height: 400px;
+    height: 500px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -676,7 +680,6 @@ section.youtube {
           padding: 0px 20px 50px; } }
 
 section.editorial {
-  background-image: url(../img/boog-bg.png);
   background-size: cover;
   background-position: center;
   color: black;
@@ -684,11 +687,18 @@ section.editorial {
   section.editorial .home-cta {
     color: #2cb4db; }
   section.editorial .home-lead {
-    margin-top: 400px; }
+    margin-top: 450px;
+    margin-left: 220px; }
+    @media (max-width: 640px) {
+      section.editorial .home-lead {
+        margin-top: 335px;
+        margin-left: -225px; } }
+  section.editorial .outdented {
+    width: 800px; }
   section.editorial .faces {
     list-style: none;
-    margin: -50px 0;
-    margin-left: -50px;
+    margin: -20px 0;
+    margin-left: -130px;
     height: calc(100% + 100px);
     padding: 0;
     position: relative;
@@ -761,13 +771,18 @@ section.editorial {
     font-size: 35px;
     margin-bottom: 40px; }
   .home-sections .poster .poster1 {
-    background-image: url(/assets/img/lightl.png);
+    background-image: url(/assets/img/bgb.png);
     background-position: center;
+    background-size: cover;
     padding: 100px 0; }
   .home-sections .poster .poster2 {
-    background-image: url(/assets/img/right.png);
+    background-image: url(/assets/img/bgb.png);
     background-position: center;
+    background-size: cover;
     padding: 100px 0; }
+    @media (max-width: 640px) {
+      .home-sections .poster .poster2 {
+        display: none; } }
   .home-sections .poster .home-cta {
     font-size: 24px;
     color: #ea4c89; }
@@ -780,15 +795,20 @@ section.editorial {
     clear: both; }
 
 section.articles {
-  background-image: url(../img/article-bg.jpg);
-  background-repeat: repeat; }
+  background-image: url(../img/bgb.png);
+  background-repeat: repeat;
+  background-size: cover;
+  padding: 100px 0px 100px 0px !important; }
   section.articles .col-1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
   section.articles .home-cta {
     color: white;
     background: #3d96cb; }
@@ -804,7 +824,7 @@ section.articles {
     background-position: center;
     width: 24.3%;
     float: left;
-    border: 1px solid white;
+    border: 1px solid #D9D9D9;
     position: relative;
     overflow: hidden;
     opacity: 0;
@@ -849,7 +869,7 @@ section.articles {
             transform: translate(0%, 0%) scale(1); }
   @media (max-width: 640px) {
     section.articles .desc-wrap {
-      margin-top: 50px;
+      margin-top: 0px;
       margin-bottom: 120px;
       position: static; } }
   @media (max-width: 999px) and (min-width: 640px) {
@@ -890,79 +910,80 @@ section.articles {
     -webkit-transform: scale3d(1, 1, 1);
             transform: scale3d(1, 1, 1); } }
 
-section.package .col-1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
-
-section.package .home-cta {
-  color: white;
-  background: #3d96cb; }
-
-section.package .article-wrap {
-  margin: 50px 0; }
-  section.package .article-wrap::after {
-    clear: both;
-    content: "";
-    display: table; }
-
-section.package .article-thumb {
-  display: block;
-  background-size: cover;
-  background-position: center;
-  width: 25%;
-  float: left;
-  position: relative;
-  overflow: hidden;
-  opacity: 0;
-  -webkit-transition: all 200ms ease-in-out;
-          transition: all 200ms ease-in-out; }
-  section.package .article-thumb.is-visible {
-    opacity: 1; }
-  section.package .article-thumb.is-emph {
-    -webkit-animation-name: flipInX;
-            animation-name: flipInX;
-    -webkit-animation-duration: 1s;
-            animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-            animation-fill-mode: both;
-    -webkit-backface-visibility: visible !important;
-            backface-visibility: visible !important; }
-  section.package .article-thumb:after {
-    content: '';
-    display: block;
-    padding-top: 100%; }
-
-section.package .article-meta {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(61, 150, 203, 0.7);
-  color: white;
-  padding: 10px;
-  -webkit-transform: translate(0%, 100%) scale(0.5);
-          transform: translate(0%, 100%) scale(0.5);
-  -webkit-transition: all 200ms ease-in-out;
-          transition: all 200ms ease-in-out;
-  opacity: 0; }
-  section.package .article-meta .name {
-    font-size: 18px;
-    line-height: 1.2; }
-  section.package .article-meta .date {
-    font-style: italic; }
-
-@media (max-width: 640px) {
-  section.package .desc-wrap {
-    margin-top: 50px; } }
-
-@media (max-width: 999px) and (min-width: 640px) {
+section.package {
+  padding: 150px 0px 150px 0px !important; }
+  section.package .col-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  section.package .home-cta {
+    color: white;
+    background: #3d96cb; }
+  section.package .article-wrap {
+    margin: 50px 0; }
+    section.package .article-wrap::after {
+      clear: both;
+      content: "";
+      display: table; }
   section.package .article-thumb {
-    width: 25%; } }
+    display: block;
+    background-size: cover;
+    background-position: center;
+    width: 25%;
+    float: left;
+    position: relative;
+    overflow: hidden;
+    opacity: 0;
+    -webkit-transition: all 200ms ease-in-out;
+            transition: all 200ms ease-in-out; }
+    section.package .article-thumb.is-visible {
+      opacity: 1; }
+    section.package .article-thumb.is-emph {
+      -webkit-animation-name: flipInX;
+              animation-name: flipInX;
+      -webkit-animation-duration: 1s;
+              animation-duration: 1s;
+      -webkit-animation-fill-mode: both;
+              animation-fill-mode: both;
+      -webkit-backface-visibility: visible !important;
+              backface-visibility: visible !important; }
+    section.package .article-thumb:after {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+  section.package .article-meta {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(61, 150, 203, 0.7);
+    color: white;
+    padding: 10px;
+    -webkit-transform: translate(0%, 100%) scale(0.5);
+            transform: translate(0%, 100%) scale(0.5);
+    -webkit-transition: all 200ms ease-in-out;
+            transition: all 200ms ease-in-out;
+    opacity: 0; }
+    section.package .article-meta .name {
+      font-size: 18px;
+      line-height: 1.2; }
+    section.package .article-meta .date {
+      font-style: italic; }
+  @media (max-width: 640px) {
+    section.package {
+      margin-bottom: -50px; }
+      section.package .desc-wrap {
+        margin-top: -50px; } }
+  @media (max-width: 999px) and (min-width: 640px) {
+    section.package .article-thumb {
+      width: 25%; } }
 
 @-webkit-keyframes flipInX {
   from {
@@ -1010,37 +1031,118 @@ section.package .article-meta {
     -webkit-transform: perspective(400px);
             transform: perspective(400px); } }
 
-.home-sections .app {
+.home-sections .icon {
   padding: 0px; }
 
-section.app {
-  color: white; }
-  section.app .home-lead {
+section.icon {
+  background-image: url(../img/bgb.png);
+  background-position: center;
+  background-size: cover;
+  color: black; }
+  section.icon .col-1 {
+    width: 550px;
+    margin: 30px;
+    margin-top: 100px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    box-sizing: border-box;
+    height: 300px; }
+    @media (max-width: 985px) {
+      section.icon .col-1 {
+        width: auto;
+        margin: 30px;
+        height: auto;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        box-sizing: border-box; } }
+  section.icon .home-lead {
     text-align: center;
-    font-size: 35px;
-    margin-bottom: 40px; }
-  section.app .dribbble, section.app .behance {
-    background-color: #ea4c89;
-    background-image: url(/assets/img/design-bg.png);
+    font-size: 30px;
+    margin-top: 150px; }
+  section.icon .dribbble, section.icon .behance {
     background-position: center;
     padding: 50px 0;
     -webkit-transition: background-color 150ms ease-in-out;
             transition: background-color 150ms ease-in-out; }
-    section.app .dribbble.behance, section.app .behance.behance {
-      background-color: #1769ff; }
-      section.app .dribbble.behance .home-cta, section.app .behance.behance .home-cta {
+    section.icon .dribbble.behance, section.icon .behance.behance {
+      background-color: #EBE6E6; }
+      section.icon .dribbble.behance .home-cta, section.icon .behance.behance .home-cta {
         color: #1769ff; }
-  section.app .home-cta {
+  section.icon .home-cta {
     font-size: 24px;
     color: #ea4c89; }
-  section.app .design-img-copy {
+  section.icon .design-img-copy {
     display: block;
     width: calc(100% - 14px);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
     margin: 5px;
     -webkit-transition: -webkit-transform 150ms ease-in-out;
             transition: transform 150ms ease-in-out; }
-  section.app .design-img-link {
+  section.icon .design-img-link {
+    display: block;
+    float: left;
+    width: calc(24% - 50px);
+    height: 80px;
+    padding: 5px;
+    margin: 05px;
+    -webkit-transition: -webkit-transform 150ms ease-in-out;
+            transition: transform 150ms ease-in-out; }
+    @media (max-width: 1200px) {
+      section.icon .design-img-link {
+        width: 20%; } }
+    @media (max-width: 985px) {
+      section.icon .design-img-link {
+        width: 24%; } }
+    @media (max-width: 360px) {
+      section.icon .design-img-link {
+        width: 18%; } }
+    section.icon .design-img-link:hover {
+      -webkit-transform: scale(1.1);
+              transform: scale(1.1); }
+    section.icon .design-img-link img {
+      margin: auto;
+      width: 70px;
+      display: block; }
+      @media (max-width: 640px) {
+        section.icon .design-img-link img {
+          width: 50px; } }
+  section.icon .cf {
+    clear: both;
+    margin-bottom: 20px; }
+
+.home-sections .app2 {
+  padding: 0px; }
+
+section.app2 {
+  color: white;
+  background-size: cover;
+  background-position: center;
+  color: black;
+  overflow: hidden; }
+  section.app2 .home-lead {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 150px;
+    margin-top: 300px; }
+  section.app2 .dribbble, section.app2 .behance {
+    background-position: center;
+    padding: 50px 0;
+    -webkit-transition: background-color 150ms ease-in-out;
+            transition: background-color 150ms ease-in-out; }
+    section.app2 .dribbble.behance .home-cta, section.app2 .behance.behance .home-cta {
+      color: #1769ff; }
+  section.app2 .home-cta {
+    font-size: 24px;
+    color: #ea4c89; }
+  section.app2 .design-img-copy {
+    display: block;
+    width: calc(100% - 14px);
+    margin: 5px;
+    -webkit-transition: -webkit-transform 150ms ease-in-out;
+            transition: transform 150ms ease-in-out; }
+  section.app2 .design-img-link {
     display: block;
     float: left;
     width: calc(33% - 30px);
@@ -1048,36 +1150,37 @@ section.app {
     margin: 5px;
     -webkit-transition: -webkit-transform 150ms ease-in-out;
             transition: transform 150ms ease-in-out; }
-    section.app .design-img-link:hover {
+    section.app2 .design-img-link:hover {
       -webkit-transform: scale(1.1);
               transform: scale(1.1); }
-    section.app .design-img-link img {
+    section.app2 .design-img-link img {
       margin: auto;
       width: 70px;
       display: block; }
-  section.app .cf {
+  section.app2 .cf {
     clear: both;
     margin-bottom: 20px; }
 
 section.notes {
-  background-image: url(../img/notes-bg.jpg);
   background-size: cover;
   background-position: center;
   color: white;
-  height: 300px; }
+  height: 500px; }
   section.notes .home-lead {
-    margin-top: 10px; }
+    margin-top: 100px; }
   section.notes .col-1 {
+    width: 240px;
     padding-left: 30px;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1.8;
     margin-top: 30px;
-    padding-right: 30px; }
+    padding-right: 30px;
+    color: black; }
     section.notes .col-1:first-child {
       padding-left: 0;
       padding-right: 30px;
-      text-align: center;
-      border-right: solid 2px white; }
+      text-align: right;
+      border-right: solid 2px gray; }
     @media (max-width: 640px) {
       section.notes .col-1 {
         padding: 0 10px; }
@@ -1088,7 +1191,7 @@ section.notes {
 
 .home-footer a {
   color: white;
-  background: #e24040;
+  background: #64696B;
   display: block;
   width: 100%;
   line-height: 6;
@@ -1107,7 +1210,7 @@ section.notes {
     .home-footer a {
       font-size: 20px; } }
   .home-footer a:hover {
-    background: #d82121; }
+    background: #325232; }
 
 .home-wrap {
   display: -webkit-box;
@@ -1184,7 +1287,8 @@ section.notes {
 
 .home-lead {
   line-height: 1.1;
-  font-size: 36px; }
+  font-size: 30px;
+  color: gray; }
   .home-lead.outdented {
     text-indent: -0.8em; }
 
