--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,6 +1,6 @@
 $primary-color: #F6C
 $text-color: #2E2D33
-$accent-color: #000
+$accent-color: #D89F62
 $bg-color: #fff
 $link-color: $accent-color
 $selection-color: none
