--- a/assets/css/3-sections/_home-articles.sass
+++ b/assets/css/3-sections/_home-articles.sass
@@ -1,11 +1,15 @@
 section.articles
 	background:
-		image: url(../img/article-bg.jpg)
+		image: url(../img/bgb.png)
 		repeat: repeat
+		size: cover
+	padding: 100px 0px 100px 0px !important
 
 	.col-1
 		display: flex
 		align-items: center
+		justify-content: center
+
 
 	.home-cta
 		color: white
@@ -22,7 +26,7 @@ section.articles
 			position: center	
 		width: 24.3%
 		float: left
-		border: 1px solid white
+		border: 1px solid #D9D9D9
 		position: relative
 		overflow: hidden
 		opacity: 0
@@ -69,7 +73,7 @@ section.articles
 
 	@media(max-width: 640px)
 		.desc-wrap
-			margin-top: 50px
+			margin-top: 0px
 			margin-bottom: 120px
 			position: static
 
