--- a/assets/css/3-sections/_home-icon.sass
+++ b/assets/css/3-sections/_home-icon.sass
@@ -1,24 +1,42 @@
-.home-sections .app
+.home-sections .icon
   padding: 0px
 
-section.app
-  color: white
+section.icon
+  background:
+    image: url(../img/bgb.png)
+    position: center
+    size: cover
+  color: black
+
+  .col-1
+    width: 550px
+    margin: 30px
+    margin-top: 100px
+    justify-content: center
+    box-sizing: border-box
+    height: 300px
+
+    @media (max-width: 985px)
+      width: auto
+      margin: 30px
+      height: auto
+      justify-content: center
+      box-sizing: border-box
 
   .home-lead
     text-align: center
-    font-size: 35px
-    margin-bottom: 40px
+    font-size: 30px
+    margin-top: 150px
 
   .dribbble, .behance
     background:
-      color: #ea4c89
-      image: url(/assets/img/design-bg.png)
+      // image: url(/assets/img/design-bg.png)
       position: center
     padding: 50px 0
     transition: background-color 150ms ease-in-out
 
     &.behance
-      background-color: #1769ff
+      background-color: #EBE6E6
 
       .home-cta
         color: #1769ff
@@ -37,12 +55,22 @@ section.app
   .design-img-link
     display: block
     float: left
-    width: calc(33% - 30px)
-    padding: 10px
+    width: calc(24% - 50px)
+    height: 80px
+    padding: 5px
     //border: 2px solid white
     //box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
-    margin: 5px
+    margin: 05px
     transition: transform 150ms ease-in-out
+
+    @media (max-width: 1200px)
+      width: 20%
+
+    @media (max-width: 985px)
+      width: 24%
+
+    @media (max-width: 360px)
+      width: 18%
 
     &:hover
       transform: scale(1.1)
@@ -52,7 +80,10 @@ section.app
       //margin-left: 30px
       width: 70px
       display: block
-    
+      
+      @media (max-width: 640px)
+        width: 50px
+
 
   .cf
     clear: both
