--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,7 +15,8 @@
 @import "3-sections/home-poster";
 @import "3-sections/home-articles";
 @import "3-sections/home-package";
-@import "3-sections/home-app";
+@import "3-sections/home-icon";
+@import "3-sections/home-app2";
 @import "3-sections/home-notes";
 @import "3-sections/home-footer";
 
