--- a/_jadefiles/section-editorial.jade
+++ b/_jadefiles/section-editorial.jade
@@ -6,6 +6,11 @@ mixin face(face, words, name)
 
 section.editorial#editorial
 	.flex.flex--center
+		
+		.col-1
+			.desc-wrap
+				p.home-lead.outdented2 Editorial Design
+
 		.col-1
 			ul.faces
 				+face("/assets/img/editorials/ed-1.png","혼자사는사람이 급증하고 있다. 왜 이런 현상이 나타나고 있으며, 혼자 라는건 어떤 의미일까? 사회가 변하며 혼자가 된 사람들, 내가 변해 혼자가 된 사람들 등 다양한 종류의 1인가구가 있다. 외롭고 쓸쓸한 1인가구에게 세상과 소통하는 방법을 제시한다.","- 1인가구 소통프로젝트_ 일인극 -")
@@ -21,7 +26,7 @@ section.editorial#editorial
 				+face("/assets/img/editorials/ed-6.png","혼자라고 해서 바라보았던 사소한 눈빛들이 일인가구에게는 상처가 되고 혼자서 할 수 없는 두려움이 된다. 그 두려움이 1인가구를 2인가구로 만들 수 있는 것도 아니다. 그냥 1인가구를 그 자체로 인정해주는 것이 혼자인 사람들을 대하는 가장 기본적인 자세이다. 혼자인 것이 좋아 혼자서 살게된 1인가구를 바라보는 시선을 이제는 우리가 바꿔야 할 차례이다.","- 1인가구 소통프로젝트_ 일인극 -")
 				li.back-btn.face
 
-
 		.col-1
-			p.home-lead.outdented Editorial Design
+			.desc-wrap
+				p.home-lead.outdented Editorial Design
 			
