--- a/_jadefiles/section-icon.jade
+++ b/_jadefiles/section-icon.jade
@@ -10,16 +10,16 @@ section.icon#icon
 				.desc-wrap
 					p.home-lead.outdented Icon Design	
 
-		.col-50.flex.flex--center.behance(data-orig-color="#E2DFDF")
+		.col-50.flex.flex--center.behance(data-orig-color="#F6F6F6")
 			.col-1
 				// p.home-lead Icon design				
-				+design-img('icon01.png', '#C8FFBF')
-				+design-img('icon02.png', '#D1FFEC')
+				+design-img('icon01.png', '#E7E6F6')
+				+design-img('icon02.png', '#F6E2E5')
 				+design-img('icon03.png', '#FFF7CC')
-				+design-img('icon04.png', '#DBFFFE')
+				+design-img('icon04.png', '#FFF2E7')
 				+design-img('icon05.png', '#FFE6CA')
-				+design-img('icon06.png', '#FFFEC0')
-				+design-img('icon07.png', '#FFC5C5')
+				+design-img('icon06.png', '#F5D6D0')
+				+design-img('icon07.png', '#E4C4F4')
 				+design-img('icon08.png', '#FFE299')
 				// +design-img('icon09.png', '#FFD6EC')
 				+design-img('icon10.png', '#FFAEA5')
