--- a/assets/css/3-sections/_home-poster.sass
+++ b/assets/css/3-sections/_home-poster.sass
@@ -17,6 +17,9 @@
       size: cover
     padding: 100px 0
 
+    @media (max-width: 640px)
+      display: none
+
   .poster2
     background:
       // color: #1769ff
@@ -26,7 +29,8 @@
     padding: 100px 0
 
     @media (max-width: 640px)
-      display: none
+      padding: 100px 0px 100px 0px
+  
   .home-cta
     font-size: 24px
     color: #ea4c89
