--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -88,9 +88,7 @@ body
   background-color: $bg-color
   font-size: 14px
   line-height: 1.6
-  font-family: 'Open Sans', sans-serif
+  font-family: 'Open Sans Bold', sans-serif
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
-
-
