--- a/assets/css/3-sections/_home-app2.sass
+++ b/assets/css/3-sections/_home-app2.sass
@@ -16,6 +16,10 @@ section.app2
     margin-bottom: 150px
     margin-top: 300px
 
+    @media(max-width: 640px)
+      margin-top: 100px
+      margin-bottom: 30px
+
   .dribbble, .behance
     background:
       // color: #ea4c89
