--- a/assets/css/3-sections/_home-icon.sass
+++ b/assets/css/3-sections/_home-icon.sass
@@ -3,18 +3,20 @@
 
 section.icon
   background:
-    image: url(../img/bgb.png)
+    // image: url(../img/bgb.png)
     position: center
     size: cover
+    color: #F6F6F6
   color: black
+
 
   .col-1
     width: 550px
-    margin: 30px
-    margin-top: 100px
+    margin: 120px 0px 70px 40px 
     justify-content: center
     box-sizing: border-box
-    height: 300px
+    height: 400px
+
 
     @media (max-width: 985px)
       width: auto
@@ -24,9 +26,13 @@ section.icon
       box-sizing: border-box
 
   .home-lead
+    padding-top: 208px
     text-align: center
     font-size: 30px
-    margin-top: 150px
+    margin-right: 0px
+
+    @media (max-width: 640px)
+      padding-top: 120px
 
   .dribbble, .behance
     background:
@@ -36,7 +42,7 @@ section.icon
     transition: background-color 150ms ease-in-out
 
     &.behance
-      background-color: #EBE6E6
+      background-color: #F6F6F6
 
       .home-cta
         color: #1769ff
@@ -55,23 +61,46 @@ section.icon
   .design-img-link
     display: block
     float: left
-    width: calc(24% - 50px)
-    height: 80px
+    width: calc(25% - 50px)
+    height: 85px
     padding: 5px
     //border: 2px solid white
     //box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
-    margin: 05px
+    margin: 15px
     transition: transform 150ms ease-in-out
 
     @media (max-width: 1200px)
-      width: 20%
+      width: 15%
 
     @media (max-width: 985px)
-      width: 24%
+      width: 20%
 
+    @media (max-width: 640px)
+      width: 17%
+
+    @media (max-width: 560px)
+      width: 16%
+
+    @media (max-width: 500px)
+      width: 15%  
+
+    // nexus 6p  
+    @media (max-width: 435px)
+      width: 12%  
+
+    // iphone 6
+    @media (max-width: 375px)
+      width: 19%
+
+    // galaxy s5  
     @media (max-width: 360px)
-      width: 18%
+      width: 10%    
 
+    // iphone 5
+    @media (max-width: 320px)
+      width: 17%
+      height: 50px
+      
     &:hover
       transform: scale(1.1)
 
@@ -82,7 +111,15 @@ section.icon
       display: block
       
       @media (max-width: 640px)
-        width: 50px
+        width: 70px
+
+      @media (max-width: 435px)
+        width: 70px  
+
+      @media (max-width: 360px)
+        width: 50px    
+      
+        
 
 
   .cf
