--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -6,11 +6,19 @@ section.youtube
 	color: black
 	height: 500px
 	
-	.home-cta
-		color: #e20a0a
+	.col-1
+		display: flex
+		align-items: center
+		justify-content: center
 
 	.home-lead
-		margin-left: 50px	
+		margin-left: 45px
+
+		@media (max-width: 640px)
+			margin-left: 0px	
+
+	.home-cta
+		color: #e20a0a
 
 	.flex-video
     box-shadow: 0px 4px 40px 3px rgba(0,0,0,0.5)
