--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -9,24 +9,52 @@ section.notes
 	.home-lead
 		margin-top: 100px
 
-	.col-1
-		width: 240px
+
+	.col-11
+		width: 350px
 		padding-left: 30px
+		margin: 200px 0px 70px 40px 
 		font-size: 14px
 		line-height: 1.8
-		margin-top: 30px
+		justify-content: center
 		padding-right: 30px
 		color: black
+
+		@media (max-width: 640px)
+			justify-content: center
+			margin: auto
+
+		@media (max-width: 375px)
+			margin: 60px 0px 0px 5px 
+			justify-content: center
+			padding: 0
+	
+	.col-1
+		width: 400px
+		padding-left: 30px
+		margin: 160px 0px 70px 40px 
+		font-size: 14px
+		line-height: 1.8
+		justify-content: center
+		padding-right: 30px
+		color: black
+		
 		&:first-child
-			padding-left: 0
-			padding-right: 30px
-			text-align: right
-			border-right: solid 2px gray
+			padding-left: 50px
+			padding-right: 60px
+			text-align: left
+			border-left: solid 2px gray
 
 		@media (max-width: 640px)
 			padding: 0 10px
 
 			&:first-child
 				padding: 0 10px
-				text-align: left
+				text-align: auto
 				border: none
+
+		@media (max-width: 375px)
+			width: 280px
+			margin-top: 80px
+			justify-content: center
+			padding: 0		
