--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1243,26 +1243,61 @@ section.notes {
   height: 500px; }
   section.notes .home-lead {
     margin-top: 100px; }
-  section.notes .col-1 {
-    width: 240px;
+  section.notes .col-11 {
+    width: 350px;
     padding-left: 30px;
+    margin: 200px 0px 70px 40px;
     font-size: 14px;
     line-height: 1.8;
-    margin-top: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 30px;
+    color: black; }
+    @media (max-width: 640px) {
+      section.notes .col-11 {
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        margin: auto; } }
+    @media (max-width: 375px) {
+      section.notes .col-11 {
+        margin: 60px 0px 0px 5px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        padding: 0; } }
+  section.notes .col-1 {
+    width: 400px;
+    padding-left: 30px;
+    margin: 160px 0px 70px 40px;
+    font-size: 14px;
+    line-height: 1.8;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-right: 30px;
     color: black; }
     section.notes .col-1:first-child {
-      padding-left: 0;
-      padding-right: 30px;
-      text-align: right;
-      border-right: solid 2px gray; }
+      padding-left: 50px;
+      padding-right: 60px;
+      text-align: left;
+      border-left: solid 2px gray; }
     @media (max-width: 640px) {
       section.notes .col-1 {
         padding: 0 10px; }
         section.notes .col-1:first-child {
           padding: 0 10px;
-          text-align: left;
+          text-align: auto;
           border: none; } }
+    @media (max-width: 375px) {
+      section.notes .col-1 {
+        width: 280px;
+        margin-top: 80px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        padding: 0; } }
 
 .home-footer a {
   color: white;
