--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -53,8 +53,26 @@ section.notes
 				text-align: auto
 				border: none
 
+		@media (max-width: 640px)
+			width: 550px
+			margin-top: 80px
+			justify-content: center
+			padding: 0		
+
+		@media (max-width: 540px)
+			width: 450px
+			margin-top: 80px
+			justify-content: center
+			padding: 0			
+
+		@media (max-width: 440px)
+			width: 350px
+			margin-top: 80px
+			justify-content: center
+			padding: 0					
+
 		@media (max-width: 375px)
 			width: 280px
 			margin-top: 80px
 			justify-content: center
-			padding: 0		
+			padding: 0						
