--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1290,6 +1290,30 @@ section.notes {
           padding: 0 10px;
           text-align: auto;
           border: none; } }
+    @media (max-width: 640px) {
+      section.notes .col-1 {
+        width: 550px;
+        margin-top: 80px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        padding: 0; } }
+    @media (max-width: 540px) {
+      section.notes .col-1 {
+        width: 450px;
+        margin-top: 80px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        padding: 0; } }
+    @media (max-width: 440px) {
+      section.notes .col-1 {
+        width: 350px;
+        margin-top: 80px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        padding: 0; } }
     @media (max-width: 375px) {
       section.notes .col-1 {
         width: 280px;
