--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -71,8 +71,14 @@ section.notes
 			justify-content: center
 			padding: 0					
 
-		@media (max-width: 375px)
-			width: 280px
+		@media (max-width: 400px)
+			width: 320px
 			margin-top: 80px
 			justify-content: center
 			padding: 0						
+
+		@media (max-width: 360px)
+			width: 285px
+			margin-top: 80px
+			justify-content: center
+			padding: 0							
