--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1314,9 +1314,17 @@ section.notes {
             -ms-flex-pack: center;
                 justify-content: center;
         padding: 0; } }
-    @media (max-width: 375px) {
+    @media (max-width: 400px) {
       section.notes .col-1 {
-        width: 280px;
+        width: 320px;
+        margin-top: 80px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        padding: 0; } }
+    @media (max-width: 360px) {
+      section.notes .col-1 {
+        width: 285px;
         margin-top: 80px;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
