--- a/_jadefiles/section-editorial.jade
+++ b/_jadefiles/section-editorial.jade
@@ -9,7 +9,7 @@ section.editorial#editorial
 		
 		.col-1
 			.desc-wrap
-				p.home-lead.outdented2 Editorial Design
+				p.home-lead.outdented2 Editorial design
 
 		.col-1
 			ul.faces
