--- a/_jadefiles/section-icon.jade
+++ b/_jadefiles/section-icon.jade
@@ -8,7 +8,7 @@ section.icon#icon
 		.col-50.flex.flex--center
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented Icon Design	
+					p.home-lead.outdented Icon design	
 
 		.col-50.flex.flex--center.behance(data-orig-color="#F6F6F6")
 			.col-1
