--- a/_jadefiles/section-youtube.jade
+++ b/_jadefiles/section-youtube.jade
@@ -2,8 +2,8 @@ section.youtube#youtube
 	.flex.flex--space-around		
 		
 		.col-1.order-first
-			p.home-lead.outdented Advertising Design
+			p.home-lead.outdented Advertising design
 
 		.col-1
 			.video-strip
-			.flex-video <iframe width="560" height="315" src="https://www.youtube.com/embed/SooDIV3tmlw" frameborder="0" allowfullscreen></iframe>
+			.flex-video <iframe src="https://player.vimeo.com/video/173575061" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
