--- a/_jadefiles/section-app2.jade
+++ b/_jadefiles/section-app2.jade
@@ -8,7 +8,7 @@ section.app2#app2
 		.col-50.flex.flex--center
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented App Design	
+					p.home-lead.outdented App design	
 				.cf
 
 		.col-50.flex.flex--center.dribbble.order-first(data-orig-color="#ea4c89")
