--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -12,14 +12,10 @@ section.notes
 
 	.col-11
 		width: 350px
-		padding-left: 30px
 		margin: 200px 0px 70px 40px 
-		font-size: 14px
-		line-height: 1.8
-		justify-content: center
 		padding-right: 30px
-		color: black
-
+		padding-left: 30px
+		
 		@media (max-width: 640px)
 			justify-content: center
 			margin: auto
@@ -30,19 +26,22 @@ section.notes
 			padding: 0
 	
 	.col-1
-		width: 400px
+		width: 390px
 		padding-left: 30px
-		margin: 160px 0px 70px 40px 
-		font-size: 14px
+		margin: 130px 0px 70px 40px 
+		font-size: 16px
 		line-height: 1.8
 		justify-content: center
 		padding-right: 30px
 		color: black
-		
+
+		p
+			margin: 20px 0 20px 0
+
 		&:first-child
-			padding-left: 50px
+			padding-left: 30px
 			padding-right: 60px
-			text-align: left
+			text-align: justify
 			border-left: solid 2px gray
 
 		@media (max-width: 640px)
@@ -60,13 +59,13 @@ section.notes
 			padding: 0		
 
 		@media (max-width: 540px)
-			width: 450px
+			width: 430px
 			margin-top: 80px
 			justify-content: center
 			padding: 0			
 
 		@media (max-width: 440px)
-			width: 350px
+			width: 320px
 			margin-top: 80px
 			justify-content: center
 			padding: 0					
