--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -21,6 +21,6 @@ header
     nav.site-nav
       +nav-content()
     
-    a(href="mailto:travisneilson@gmail.com").email-link +email me
+    a(href="mailto:zalhanilll@gmail.com").email-link +email me
     
     .mobile-nav-toggle: span
