--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -18,7 +18,7 @@ section.notes
 		
 		@media (max-width: 640px)
 			justify-content: center
-			margin: auto
+			margin: 60px auto
 
 		@media (max-width: 375px)
 			margin: 60px 0px 0px 5px 
@@ -60,19 +60,19 @@ section.notes
 
 		@media (max-width: 540px)
 			width: 430px
-			margin-top: 80px
+			margin-top: 100px
 			justify-content: center
 			padding: 0			
 
 		@media (max-width: 440px)
 			width: 320px
-			margin-top: 80px
+			margin-top: 120px
 			justify-content: center
 			padding: 0					
 
 		@media (max-width: 400px)
 			width: 320px
-			margin-top: 80px
+			margin-top: 120px
 			justify-content: center
 			padding: 0						
 
