--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -51,7 +51,7 @@
 			display: block
 			text-align: right			
 			padding-right: 20px
-
+			color: #3D3F3F
 		.mobile-nav-toggle
 			display: none
 			width: 50px
