--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -527,7 +527,8 @@ body {
   .home-wrap header .email-link {
     display: block;
     text-align: right;
-    padding-right: 20px; }
+    padding-right: 20px;
+    color: #3D3F3F; }
   .home-wrap header .mobile-nav-toggle {
     display: none;
     width: 50px;
@@ -1253,7 +1254,7 @@ section.notes {
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
-        margin: auto; } }
+        margin: 60px auto; } }
     @media (max-width: 375px) {
       section.notes .col-11 {
         margin: 60px 0px 0px 5px;
@@ -1297,7 +1298,7 @@ section.notes {
     @media (max-width: 540px) {
       section.notes .col-1 {
         width: 430px;
-        margin-top: 80px;
+        margin-top: 100px;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
@@ -1305,7 +1306,7 @@ section.notes {
     @media (max-width: 440px) {
       section.notes .col-1 {
         width: 320px;
-        margin-top: 80px;
+        margin-top: 120px;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
@@ -1313,7 +1314,7 @@ section.notes {
     @media (max-width: 400px) {
       section.notes .col-1 {
         width: 320px;
-        margin-top: 80px;
+        margin-top: 120px;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
@@ -1329,7 +1330,7 @@ section.notes {
 
 .home-footer a {
   color: white;
-  background: #BEC7CC;
+  background: #8F8F91;
   display: block;
   width: 100%;
   line-height: 6;
